@@ -22,7 +22,4 @@ print_ver_ truncate
 # truncate on dir not allowed
 truncate -s+0 . && fail=1
 
-# getting the size of a dir is not allowed
-truncate -r. file && fail=1
-
 Exit $fail
